2003-04-24  Adam Fedor  <fedor@gnu.org>

	* Documentation/filesystem.texi: Clarify Local installation
	rights, Remove Network/{Server,Users}.

Wed Apr 23 09:18:07 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* config.make.in (CPP): Added.  (GENERAL_CPP): Removed.
	* rules.make (ALL_CPLISTFLAGS): Added -x c -traditional.
	(%.plist): Use CPP, not GENERAL_CPP.

Tue Apr 22 16:11:14 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* rules.make (%.c): New rules to generate .c files from .l files
	using lex and from .y files using yacc.

Tue Apr 22 15:27:02 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUstep.csh.in: Quote all values of setenv, set, source calls.

Mon Apr 14 12:59:23 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	Implemented support for preprocessed Info.plists in applications.
	* config.make.in (GENERAL_CPP): New variable.
	* rules.make (ALL_CPLISTFLAGS): New flags.
	(%.plist): Added rule to generate %.plist from %.cplist by running
	the preprocessor.
	* messages.make (ECHO_PREPROCESSING): New message.
	* Instance/application.make: If xxx_PREPROCESS_INFO_PLIST is set
	to yes in the user makefile, automatically depend on
	xxxInfo.plist, which is then automatically generated from
	xxxInfo.cplist.	
	* Master/application.make (_PLIST_INFO_FILES): New variable.
	(internal-clean): Remove info plist files generated by the
	preprocessor.
	
Fri Apr 11 12:38:44 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile.in (install): Bug fix - install fixpath.sh from the
	local directory, not from the source directory.

Sun Apr  6 02:25:07 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile.in (install): Bug fix - install GNUstep-reset.sh
	from the source directory, not from the local directory.

Mon Mar 31 18:43:07 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/framework.make (build-framework-dirs): Do not create
	the symlink from inside derived_src to the headers if there are no
	headers; remove the file before creating the symlink.
	